--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "env-var": "^7.5.0",
     "express": "^4.21.2",
